[tool.poetry]
name = "poetry-sudoku-solver"
version = "0.1.0"
description = "Sudoku solver that uses Poetry's dependency resolver"
authors = ["Artjoms Iškovs <mildbyte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
tqdm = "^4.64.0"
click = "^8.1.3"
devpi-server = "^6.5.1"
devpi-client = "^5.2.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
isort = "^5.10.1"
types-toml = "^0.10.7"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry-sudoku-solver = "poetry_sudoku_solver.main:solver"
