[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sudoku-problem"
version = "1.0.0"
description = ""
authors = []
[[tool.poetry.source]]
name = "devpi"
url = "http://localhost:3141/poetry/sudoku/+simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6"
sudoku-cell11 = "*"
sudoku-cell12 = "2.0.0"
sudoku-cell13 = "*"
sudoku-cell14 = "8.0.0"
sudoku-cell15 = "*"
sudoku-cell16 = "9.0.0"
sudoku-cell17 = "*"
sudoku-cell18 = "*"
sudoku-cell19 = "*"
sudoku-cell21 = "3.0.0"
sudoku-cell22 = "7.0.0"
sudoku-cell23 = "*"
sudoku-cell24 = "6.0.0"
sudoku-cell25 = "*"
sudoku-cell26 = "*"
sudoku-cell27 = "*"
sudoku-cell28 = "2.0.0"
sudoku-cell29 = "*"
sudoku-cell31 = "6.0.0"
sudoku-cell32 = "*"
sudoku-cell33 = "*"
sudoku-cell34 = "*"
sudoku-cell35 = "*"
sudoku-cell36 = "*"
sudoku-cell37 = "1.0.0"
sudoku-cell38 = "*"
sudoku-cell39 = "*"
sudoku-cell41 = "*"
sudoku-cell42 = "*"
sudoku-cell43 = "*"
sudoku-cell44 = "1.0.0"
sudoku-cell45 = "6.0.0"
sudoku-cell46 = "*"
sudoku-cell47 = "7.0.0"
sudoku-cell48 = "8.0.0"
sudoku-cell49 = "*"
sudoku-cell51 = "*"
sudoku-cell52 = "3.0.0"
sudoku-cell53 = "2.0.0"
sudoku-cell54 = "7.0.0"
sudoku-cell55 = "*"
sudoku-cell56 = "8.0.0"
sudoku-cell57 = "*"
sudoku-cell58 = "*"
sudoku-cell59 = "*"
sudoku-cell61 = "*"
sudoku-cell62 = "*"
sudoku-cell63 = "*"
sudoku-cell64 = "*"
sudoku-cell65 = "*"
sudoku-cell66 = "*"
sudoku-cell67 = "*"
sudoku-cell68 = "*"
sudoku-cell69 = "2.0.0"
sudoku-cell71 = "*"
sudoku-cell72 = "*"
sudoku-cell73 = "*"
sudoku-cell74 = "9.0.0"
sudoku-cell75 = "*"
sudoku-cell76 = "*"
sudoku-cell77 = "*"
sudoku-cell78 = "*"
sudoku-cell79 = "6.0.0"
sudoku-cell81 = "2.0.0"
sudoku-cell82 = "*"
sudoku-cell83 = "4.0.0"
sudoku-cell84 = "*"
sudoku-cell85 = "*"
sudoku-cell86 = "*"
sudoku-cell87 = "*"
sudoku-cell88 = "*"
sudoku-cell89 = "*"
sudoku-cell91 = "*"
sudoku-cell92 = "*"
sudoku-cell93 = "*"
sudoku-cell94 = "*"
sudoku-cell95 = "3.0.0"
sudoku-cell96 = "7.0.0"
sudoku-cell97 = "*"
sudoku-cell98 = "9.0.0"
sudoku-cell99 = "*"

[tool.poetry.dev-dependencies]
